--- a/public/styles/site/popup.less
+++ b/public/styles/site/popup.less
@@ -31,13 +31,15 @@
 	}
 
 	button.close-popup {
+		background: transparent;
+		padding: 0px;
+		box-sizing: border-box;
 		z-index: 2;
 		position: absolute;
 		left: 20px;
 		top: 20px;
 		height: 33px;
 		width: 33px;
-		background: red;
 		border: none;
 		cursor: pointer;
 	}
