--- a/public/styles/site/post.less
+++ b/public/styles/site/post.less
@@ -73,4 +73,14 @@ article.post {
 	.description {
 		margin-top: 20px;
 	}
+
+	.relatedEvents-caption {
+		display: block;
+	}
+
+	.relatedEvent {
+		display: inline-block;
+		padding: 20px;
+		background: grey;
+	}
 }
