--- a/templates/views/blog.pug
+++ b/templates/views/blog.pug
@@ -10,6 +10,7 @@ block content
 	.popup
 		//- .popup-overlay
 		button.close-popup
+			include ../../public/images/sprite/post-close.svg
 		.popup-content
 
 block js
