--- a/public/styles/site/agenda.less
+++ b/public/styles/site/agenda.less
@@ -129,7 +129,7 @@
 			opacity: 1;
 			background: transparent;
 
-			&:hover {
+			&:not(.disabled):hover {
 				background: fade(@color1-a, 50%);
 			}
 
