--- a/public/styles/mixins/grid.less
+++ b/public/styles/mixins/grid.less
@@ -20,3 +20,9 @@
 		margin: 0 @gutter / 2;
 	}
 }
+
+@media screen and (max-width: 600px), screen and (max-device-width: 600px) {
+	.grid {
+		padding: 0 @margin-mobile - @gutter / 2;
+	}
+}
