--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -7,7 +7,8 @@ html
 	//- HTML HEADER
 	head
 		meta(charset="utf-8")
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
+		meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0', name='viewport')
+		meta(name="robots" content="NOODP")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge")
 
 		title= title
