--- a/templates/views/contact.pug
+++ b/templates/views/contact.pug
@@ -1,5 +1,10 @@
 extends ../layouts/default
-		
+
+block head
+	title= process.env.WEBSITE_NAME + ' | Contact'
+	//- if data.event.brief
+	//- 	meta(name="description" content=data.event.brief)
+
 block content
 	section.contact
 		#map
@@ -20,7 +25,6 @@ block content
 				span.button-text Send
 				span.mail-loader
 			.result-box(aria-hidden="true")
-				- console.log(responses);
 				if responses.success
 					p.result-message.success Votre message a été envoyé, merci.
 				if responses.invalidEmail
