Bunch of stuff, the designer is too fucking SLOWWWWWW

--- a/public/styles/site/post.less
+++ b/public/styles/site/post.less
@@ -1,6 +1,6 @@
 
 .popup article.post {
-	background: @color1-d;
+	background: @color1-e;
 	position: absolute;
 	height: 100%;
 	width: 100%;
@@ -17,7 +17,7 @@
 
 .post-wrapper {
 	min-height: 100vh;
-	background: @color1-d;
+	background: @color1-e;
 }
 
 article.post {
