--- a/public/styles/mixins/variables.less
+++ b/public/styles/mixins/variables.less
@@ -23,7 +23,8 @@
 @color1-a : #F79386;
 @color1-b : #FFAD9F;
 @color1-c : #F4D6CE;
-@color1-d : #F7F1F0;
+@color1-d : #F9E7E4;
+@color1-e : #F7F1F0;
 
 // @color-success : limegreen;
 // @color-error : orange;
