--- a/public/styles/site/agenda.less
+++ b/public/styles/site/agenda.less
@@ -298,7 +298,17 @@
 
 .agenda.interactive {
 	h2 {
-		display: none;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 100%;
+		font-size: 14vw;
+		text-align: center;
+		margin: 0;
+		color: @color1-d;
+		text-transform: uppercase;
+		z-index: -1;
+	 	transform: translate(-50%, -50%);
 	}
 
 	fieldset.time-selector, fieldset.filter {
@@ -488,6 +498,27 @@
 				padding-top: 0;
 				padding-bottom: 0;
 				width: 100%;
+			}
+
+			.no-events-in-month, .no-events-in-filter.show {
+				position: relative;
+				margin-top: 20px;
+				margin-bottom: 30px;
+			}
+
+			.no-events-in-filter {
+				position: relative;
+				margin-bottom: 0;
+				margin-top: 0;
+			}
+
+			h2 {
+				font-size: 10vw;
+				z-index: 1;
+				position: static;
+				transform: none;
+				margin-bottom: 50px;
+				display: inline-block;
 			}
 		}
 
