--- a/public/styles/site/contact.less
+++ b/public/styles/site/contact.less
@@ -17,14 +17,32 @@ section.contact {
 }
 
 section.contact form {
-	width: calc(50% ~"-" @gutter / 2);
+	width: calc(4 * @column ~"-" @gutter / 2);
 	padding-left: @margin;
+
+	input, textarea {
+		width: 100%;
+	}
+}
+
+footer form.newsletter {
+	width: calc(4 * @column ~"-" @gutter / 2);
+	float: left;
+	padding-left: @margin;
+	margin-top: 40px;
+
+	input {
+		width: 100%;
+	}
+
+	input, button {
+		background: white;
+	}
+}
+
+.custom-form {
 	float: left;
 	box-sizing: border-box;
-
-	h3 {
-		padding-left: 15px;
-	}
 
 	input, textarea, button, select {
 		float: left;
@@ -61,13 +79,11 @@ section.contact form {
 	}
 
 	input {
-		width: 70%;
 		height: 30px;
 	}
 
 	textarea {
 		resize: none;
-		width: 100%;
 		padding-top: 10px;
 		height: 210px;
 	}
@@ -75,7 +91,7 @@ section.contact form {
 	button {
 		cursor: pointer;
 		position: relative;
-		padding: 0;
+		padding: 0 10px;
 		height: 30px;
 		line-height: 32px;
 		min-width: 60px;
@@ -91,7 +107,7 @@ section.contact form {
 			opacity: 1;
 		}
 
-		.mail-loader {
+		.loader {
 			position: absolute;
 			left: 0;
 			top: 0;
@@ -114,7 +130,7 @@ section.contact form {
 				border-left: 2px solid fade(@black, 80%);
 				transform: translateZ(0);
 				transform-origin: 100% 100%;
-				animation: sending-mail 0.8s infinite linear;
+				animation: sending 0.8s infinite linear;
 			}
 		}
 	}
@@ -180,7 +196,7 @@ section.contact form {
 				transition: opacity 0.2s ease-in;
 			}
 
-			.mail-loader {
+			.loader {
 				opacity: 1;
 				transition: opacity 0.3s ease-out 0.2s;
 			}
@@ -188,7 +204,7 @@ section.contact form {
 	}
 }
 
-@keyframes sending-mail {
+@keyframes sending {
 	0% {
 		transform: rotate(0deg);
 	}
