--- a/public/styles/site/popup.less
+++ b/public/styles/site/popup.less
@@ -8,7 +8,7 @@
 	right: 0;
 	bottom: 0;
 	overflow: hidden;
-	background: @color1-d;
+	background: @color1-e;
 
 	// .popup-overlay {
 	// 	background: red;
