--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -56,16 +56,25 @@ html
 			//- The Intro block appears above flash messages (used for temporary information display)
 			block intro
 
-			//- Flash messages allow you to display once-off status messages to users, e.g. form
-			//- validation errors, success messages, etc.
-			+flash-messages(messages)
-
 			//- The content block should contain the body of your template's content
 			block content
 
 
 		//- FOOTER
 		footer
+			form.custom-form.newsletter(method='post' action='/newsletter' onsubmit='return submitNewsletter(this);' autocomplete='on')
+				h2 Inscrivez-vous à la newsletter
+				input.action(type='hidden', name='action', value='newsletter')
+				label(for='fname') Prénom
+				input.optionnal(type='text', name='fname', placeholder='Prénom')
+				label(for='lname') Nom
+				input.optionnal(type='text', name='lname', placeholder='Nom')
+				label(for='email') Email
+				input(type='email', name='email', placeholder='Email (ce champs est requis)')
+				button(type='submit')
+					span.button-text Envoyer
+					span.loader
+				.result-box
 			div.admin-login
 				if user
 					if user.canAccessKeystone
