--- a/templates/layouts/email.pug
+++ b/templates/layouts/email.pug
@@ -1,6 +1,37 @@
+- var br = '%0D%0A';
+- var mailto = 'mailto:' + enquiry.email + '?subject=RE: ' + enquiry.subject + '&body=' + br + br + enquiry.date + ', ' + enquiry.name + ' a écrit :' + br + br + enquiry.message;
+
 doctype html
 html(lang="en")
 	head
-	body
-		h1 Your first email sent with Keystone!
-		p Congratulations on sending your first email with Keystone
+	body(style='font-family: Helvetica Neue, Arial, sans-serif;')
+		h2(style='font-size: 22px; margin-bottom: 10px;') #{env.WEBSITE_NAME} : Vous avez reçu un message de #{enquiry.name}
+		br
+		.message(style='box-sizing: border-box; width: 100%; font-size: 14px; background: #F7F1F0; padding: 20px; margin-bottom: 10px;')
+			span.date(style='display:inline-block; margin-bottom: 20px;') #{enquiry.date}
+			br
+			span.subject(style='display:inline-block; font-style: italic;') Sujet : #{enquiry.subject}
+			br
+			p.text(style='display:inline-block; margin: 20px 0;') #{enquiry.message}
+			br
+			span.name(style='display:inline-block; margin-bottom: 5px;') #{enquiry.name}
+			br
+			a.mail(style='display:inline-block; color: black; margin-bottom: 5px;' href=mailto)= enquiry.email
+			br
+			span.phone(style='display:inline-block;')= enquiry.phone
+		br
+		a.reply(style='color: black; text-decoration: none;' href=mailto)
+			div(style='float:left; width:auto; font-size: 18px; padding: 10px 15px; background: #FFAD9F;')
+				| Répondre
+		br
+		span.toSite(style='display:block; clear:both; float:left; margin-top: 20px; font-size: 16px;') Vous pouvez retrouver ce message dans 
+			a(href=env.DOMAIN_NAME + '/keystone') l'interface administrateur du site
+	style.
+		a.reply div {
+			transition: background 0.3s ease;
+			-webkit-transition: background 0.3s ease;
+		}
+
+		a.reply div:hover {
+			background: #F46856!important;
+		}
