Reworking the nav animation

--- a/public/styles/mixins/fonts.less
+++ b/public/styles/mixins/fonts.less
@@ -3,17 +3,25 @@
 /* Open sans */
 
 @font-face {
-    font-family: 'opensans';
-    src: url('/fonts/opensans/opensans-regular.woff2') format('woff2'),
-         url('/fonts/opensans/opensans-regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'opensans';
+	src: url('/fonts/opensans/opensans-regular.woff2') format('woff2'),
+		 url('/fonts/opensans/opensans-regular.woff') format('woff');
+	font-weight: 500;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'opensans';
-    src: url('/fonts/opensans/opensans-extrabold.woff2') format('woff2'),
-         url('/fonts/opensans/opensans-extrabold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
+	font-family: 'opensans';
+	src: url('/fonts/opensans/opensans-semibold.woff2') format('woff2'),
+		 url('/fonts/opensans/opensans-semibold.woff') format('woff');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'opensans';
+	src: url('/fonts/opensans/opensans-extrabold.woff2') format('woff2'),
+		 url('/fonts/opensans/opensans-extrabold.woff') format('woff');
+	font-weight: 900;
+	font-style: normal;
 }
