--- a/public/styles/mixins/variables.less
+++ b/public/styles/mixins/variables.less
@@ -26,6 +26,8 @@
 @color1-d : #F9E7E4;
 @color1-e : #F7F1F0;
 
+@color2-a: #FE615D;
+
 // @color-success : limegreen;
 // @color-error : orange;
 // @color-failure : red;
@@ -39,3 +41,10 @@
 @font-size-m : 15px;
 @font-size-l : 18px;
 @font-size-xl : 30px;
+
+// Accessible via JS
+#less {
+    .margin { width: @margin; }
+    .column { width: @column; }
+    .gutter { width: @gutter; }
+}
