--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -21,7 +21,7 @@ a {
 }
 
 .grid {
-	display: none;
+	// display: none;
 }
 
 
@@ -39,6 +39,7 @@ a {
 
 //template
 @import "site/layout.less";
+@import "site/nav.less";
 
 // pages
 @import "site/index.less";
