--- a/public/styles/site/agenda.less
+++ b/public/styles/site/agenda.less
@@ -55,7 +55,7 @@
 		margin: 0;
 		border: none;
 		color: @color1-a;
-		font-weight: bold;
+		font-weight: 900;
 		font-size: 13px;
 		float: right;
 		padding: 0;
@@ -205,7 +205,7 @@
 		}
 
 		input:checked + label {
-			font-weight: bold;
+			font-weight: 900;
 
 			&:after {
 				border-bottom: 4px solid white!important;
@@ -277,7 +277,7 @@
 
 		.title {
 			font-size: 30px;
-			font-weight: bold;
+			font-weight: 900;
 			overflow: hidden;
 			.multiline-ellipsis(3, 30px, 1.15);
 		}
@@ -286,7 +286,7 @@
 			position: absolute;
 			right: -7px;
 			top: -15px;
-			font-weight: bold;
+			font-weight: 900;
 			font-size: 40px;
 		}
 	}
@@ -354,7 +354,7 @@
 			margin-top: 61px;
 			text-align: center;
 			color: @color1-a;
-			font-weight: bold;
+			font-weight: 900;
 			margin-left: 0;
 		}
 
