--- a/public/styles/site/mapbox.less
+++ b/public/styles/site/mapbox.less
@@ -163,7 +163,7 @@ a.mapboxgl-ctrl-logo {
 }
 /* stylelint-disable */
 .mapboxgl-ctrl-attrib .mapbox-improve-map {
-    font-weight: bold;
+    font-weight: 900;
     margin-left: 2px;
 }
 /*stylelint-enable*/
