--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -34,17 +34,24 @@ html
 		//- ... or completely change this header to suit your design.
 
 		header.nav
-			nav
-				ul.user-nav
-					li
-						a.logo(href="/") Le Bientôt Nommé
-					each link in navLinks
-						li(class=(section == link.key ? 'active' : null)): a(href=link.href)= link.label
-				if user
-					if user.canAccessKeystone
-						ul.admin-nav
-							li: a(href='/keystone' target="_blank") Ouvrir l'interface administrateur
-							li: a(href='/keystone/signout') Se déconnecter
+			button.toggle-nav
+				include ../../public/images/sprite/menu.svg
+				span Menu
+			.nav-wrapper
+				nav
+					.root-link
+						a(href="/")= process.env.WEBSITE_NAME
+					.links-container
+						ul
+							each link in navLinks
+								li(class=(section == link.key ? 'active' : null)): a(href=link.href)= link.label
+							if user
+								if user.canAccessKeystone
+									li: a(href='/keystone' target="_blank") Ouvrir l'interface administrateur
+									li: a(href='/keystone/signout') Se déconnecter
+					.socials
+						a(href="" target="_blank") facebook
+						a(href="" target="_blank") twitter
 
 		//- BODY
 		main
